fix for header text on smaller screens

--- a/sass/partials/_home.scss
+++ b/sass/partials/_home.scss
@@ -99,7 +99,7 @@ body.home {
         }
 
         .fade-in-heading {
-          top: rem-calc(100);
+          top: rem-calc(80);
         }
       }
 
